# smtp-test-server

./: Cargo.toml  README.md
.github/workflows/: check.yml
src/: build.rs  config.rs  email.rs  lib.rs  server.rs  smtp.rs
