[package]
name = "smtp-test-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander van Ratingen"]
homepage = "https://github.com/alvra/smtp-test-server"
repository = "https://github.com/alvra/smtp-test-server"
documentation = "https://docs.rs/smtp-test-server"
description = "Run a simple SMTP server for testing"
readme = "README.md"
keywords = ["smtp", "testing"]

[dependencies]
tokio = { version = "1.29.1", features = ["sync", "net", "io-util", "macros", "rt"], default-features = false }
tokio-stream = "^0.1.14"
mailparse = "^0.14.0"
thiserror = "1.0.44"
base64ct = { version = "1.6.0", features = ["alloc"] }
async-stream = "^0.3.5"
lettre = { version = "0.10.4", optional = true, features = ["builder"], default-features = false }
tracing = { version = "^0.1.37", optional = true }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["time"] }
tokio-test = "^0.4.2"
lettre = { version = "^0.10.4", features = ["builder", "smtp-transport", "tokio1"], default-features = false }

[package.metadata.docs.rs]
all-features = true
